@@ -1,3 +1,10 @@
+===== 1.6 =====
+
+* 64 bit integer
+* String
+* ast.build_expr()
+* unit test module
+
 ===== 1.4 =====
 
 * assert   ...done
