@@ -4,3 +4,5 @@ var b = true;
 if (b) {
     println(!b);
 }
+
+var c = "%d".format(1);
